fix merge error for commit to allow ARP to be recieved in low power mode

--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.28
-# Sun Jan 16 03:40:37 2011
+# Thu Jan 27 01:41:51 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -33,6 +33,11 @@ CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_LOCALVERSION="-cyanogenmod"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZMA=y
+# CONFIG_KERNEL_GZIP is not set
+# CONFIG_KERNEL_BZIP2 is not set
+CONFIG_KERNEL_LZMA=y
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -426,9 +431,10 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -436,6 +442,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_INPUT=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1155,7 +1162,6 @@ CONFIG_UNIX98_PTYS=y
 #
 # Diag Support
 #
-# CONFIG_DIAG_CHAR is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
@@ -1224,7 +1230,7 @@ CONFIG_SPI_QSD=y
 CONFIG_SPI_QSD_NEW=y
 CONFIG_SPI_CRUCIAL_OJ=y
 CONFIG_SPI_TOUCHSCREEN_NTRIG=y
-CONFIG_SPI_AIC3254=y
+# CONFIG_SPI_AIC3254 is not set
 
 #
 # SPI Protocol Masters
@@ -1533,18 +1539,19 @@ CONFIG_USB_GADGET_DUALSPEED=y
 CONFIG_USB_ANDROID=y
 # CONFIG_USB_ANDROID_ACM is not set
 CONFIG_USB_ANDROID_ADB=y
-CONFIG_USB_ANDROID_DIAG=y
+# CONFIG_USB_ANDROID_DIAG is not set
 # CONFIG_USB_ANDROID_LTE_DIAG is not set
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_USB_ANDROID_RNDIS_WCEIS=y
-CONFIG_USB_ANDROID_SERIAL=y
-CONFIG_USB_ANDROID_PROJECTOR=y
+# CONFIG_USB_ANDROID_SERIAL is not set
+# CONFIG_USB_ANDROID_PROJECTOR is not set
 # CONFIG_USB_ANDROID_MTP is not set
 # CONFIG_USB_ANDROID_ECM is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
-# CONFIG_USB_ACCESSORY_DETECT is not set
-# CONFIG_DOCK_ACCESSORY_DETECT is not set
+CONFIG_USB_ACCESSORY_DETECT=y
+# CONFIG_USB_ACCESSORY_DETECT_BY_ADC is not set
+CONFIG_DOCK_ACCESSORY_DETECT=y
 # CONFIG_USB_BYPASS_VBUS_NOTIFY is not set
 # CONFIG_USB_HUB is not set
 
@@ -1728,8 +1735,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 #
 # CONFIG_RAR_REGISTER is not set
 # CONFIG_IIO is not set
-CONFIG_BTPORT=y
-CONFIG_BTPORT_DRV=y
+# CONFIG_BTPORT is not set
 
 #
 # File systems
