--- a/arch/arm/configs/dumfuq_glacier_defconfig
+++ b/arch/arm/configs/dumfuq_glacier_defconfig
@@ -31,7 +31,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-cm_oc_smartass"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
